--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,11 +21,10 @@ const { title } = Astro.props;
     <div id="app" class="relative h-screen p-2 gap-2">
       <aside class="[grid-area:aside] flex-col flex overflow-y-auto">
         <AsideMenu />
-
-        <main class="[grid-area:main] rounded-lg bg-zinc-900 overflow-y-auto">
-          <slot />
-        </main>
       </aside>
+      <main class="[grid-area:main] rounded-lg bg-zinc-900 overflow-y-auto">
+        <slot />
+      </main>
 
       <footer class="[grid-area:player] min-h-[100px]"></footer>
     </div>
@@ -43,6 +42,7 @@ const { title } = Astro.props;
   html {
     font-family: "CircularStd", system-ui, sans-serif;
     background-color: #121212;
+    color: white;
   }
   @font-face {
     font-family: "CircularStd";
