--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
-import Layout from "../layouts/Layout.astro"
-import PlaylistItemCard from "@/components/PlaylistItemCard.astro"
-import { playlists } from "@/lib/data"
+import Layout from "../layouts/Layout.astro";
+import PlaylistItemCard from "@/components/PlaylistItemCard.astro";
+import { playlists } from "@/lib/data";
+import Greetings from "@/components/Greetings.svelte"
 ---
 
 <Layout title="Spotify Clone">
@@ -12,6 +13,7 @@ import { playlists } from "@/lib/data"
     <!-- <PageHeader /> -->
 
     <div class="relative z-10 px-6 pt-10">
+      <Greetings/>
       <div class="flex flex-wrap mt-6 gap-4">
         {playlists.map((playlist) => <PlaylistItemCard playlist={playlist} />)}
       </div>
