--- a/src/components/PlaylistItemCard.astro
+++ b/src/components/PlaylistItemCard.astro
@@ -1,5 +1,6 @@
 ---
 import { type Playlist } from "@/lib/data";
+import { CardPlayButton } from "./CardPlayButton";
 
 interface Props {
   playlist: Playlist;
@@ -11,10 +12,16 @@ const { id, cover, title, artists, color } = playlist;
 const artistsString = artists.join(", ");
 ---
 
-<article>
+<article
+  class="group relative hover:bg-zinc-800 shadow-lg hover:shadow-xl bg-zinc-500/30"
+>
+  <div
+    class="absolute right-4 bottom-20 translate-y-4 transition-all opacity-0 group-hover:opacity-100 group-hover:translate-y-0 z-10 rounded-md duration-300">
+    <CardPlayButton id={id} client:visible />
+  </div>
   <a
     href={`/playlist/${id}`}
-    class="playlist-item transition-all duration-300 flex relative p-2 overflow-hidden gap-2 pb-6 rounded-md hover:bg-zinc-800 shadow-lg hover:shadow-xl bg-zinc-500/30 w-44 flex-col"
+    class="playlist-item transition-all duration-300 flex relative p-2 overflow-hidden gap-2 pb-6 w-44 flex-col"
     transition:name=`playlist ${id} box`
   >
     <picture class="aspect-square w-full h-auto flex-none">
