--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import { ViewTransitions } from "astro:transitions";
 import AsideMenu from "../components/AsideMenu.astro";
-import { Player } from "@/components/Player";
+import Player  from "@/components/Player";
 interface Props {
   title: string;
 }
@@ -29,8 +29,7 @@ const { title } = Astro.props;
         <slot />
       </main>
 
-      <footer class="[grid-area:player] min-h-[100px]">
-        {/* El estado persiste independientemente de la vista*/}
+      <footer class="[grid-area:player]">
         <Player client:load transition:name="media-player" transition:persist />
       </footer>
     </div>
@@ -41,7 +40,7 @@ const { title } = Astro.props;
         grid-template-areas:
           "aside main main"
           "player player player";
-        grid-template-columns: 350px 1fr;
+        grid-template-columns: 300px 1fr;
         grid-template-rows: 1fr auto;
       }
     </style>
