--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,13 +5,11 @@ import { playlists } from "@/lib/data";
 import Greetings from "@/components/Greetings.svelte"
 ---
 
-<Layout title="Spotify Clone">
+<Layout title="cuicatl">
   <div
     id="playlist-container"
-    class="relative transition-all duration-1000 bg-green-600"
+    class="relative transition-all duration-1000 bg-[#154D71]"
   >
-    <!-- <PageHeader /> -->
-
     <div class="relative z-10 px-6 pt-10">
       <Greetings/>
       <div class="flex flex-wrap mt-6 gap-4">
