--- a/src/pages/playlist/[id].astro
+++ b/src/pages/playlist/[id].astro
@@ -12,14 +12,12 @@ const playListSongs = songs.filter(
 );
 ---
 
-<Layout title="Spotify Clone">
+<Layout title="Cuicatl">
   <div
     id="playlist-container"
     class="relative flex flex-col h-full bg-zinc-900 overflow-x-hidden"
     transition:name=`playlist ${id} box`
   >
-    <!-- <PageHeader /> -->
-
     <header class="flex flex-row gap-8 px-6 mt-12">
       <picture class="aspect-square w-52 h-52 flex-none">
         <img
@@ -54,7 +52,7 @@ const playListSongs = songs.filter(
     </header>
 
     <div class="pl-6 pt-6">
-      <MusicTable client:load id={id} size="large" />
+      <MusicTable id={id} size="large" />
     </div>
 
     <div class="relative z-10 px-6 pt-10"></div>
